--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hola soy Jose</h1>    
-    <img src=".assets/img/giphy.gif" alt="funny gif">
+    <img src="assets/img/giphy.gif" alt="funny gif">
 </body>
 </html>
