testing ssh Keys on imac

--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
             badge.textContent = '✅ TODOS LOS TESTS PASARON';
         } else {
             badge.textContent = '❌ TESTS FALLIDOS';
+        // im currently testing my ssh keys on iMac
         }
     </script>
 </body>
